<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginVertical="5dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginHorizontal="10dp"
    android:background="#C7BDBD"
    tools:context=".ViewModels.newsRecyclerViewAdapter">

    <androidx.cardview.widget.CardView
        android:id="@+id/newsCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/newsDescription"
                android:layout_width="260dp"
                android:layout_height="62dp"
                android:layout_alignTop="@id/NewsImage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="5dp"
                android:layout_toStartOf="@+id/NewsImage"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/dummyText"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/newsSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsDescription"
                android:layout_marginVertical="4dp"
                android:layout_alignStart="@id/newsDescription"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/purple"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/newsContent" />

            <ImageView
                android:id="@+id/NewsImage"
                android:layout_width="110dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/RVImageDescription"/>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>